# CalculatorCMake

./: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  calculator  cmake_install.cmake
include/: Calcy.h  Calcy.h.gch
src/: Calcy.cpp
